# example-pytest-ansible-testinfra-conflict

./: README.md  pyproject.toml
collections/ansible_collections/auburus/test_collection/: playbook.yml
collections/ansible_collections/auburus/test_collection/roles/test_role/molecule/default/: converge.yml  molecule.yml
collections/ansible_collections/auburus/test_collection/roles/test_role/molecule/default/tests/: test_role.py
collections/ansible_collections/auburus/test_collection/roles/test_role/tasks/: main.yml
